Update java to 25