@@ -17,10 +17,5 @@ dependencies {
     testImplementation testFixtures(project(':symbol-processor-common'))
 }
 
-
-test {
-    jvmArgs(['--enable-preview'])
-}
-
 apply from: "${project.rootDir}/gradle/kotlin-plugin.gradle"
 apply from: "${project.rootDir}/gradle/in-test-generated.gradle"
